--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -1,3 +1,3 @@
-<header>Header</header>
+<app-header></app-header>
 <router-outlet></router-outlet>
-<footer>Footer</footer>
+<app-footer></app-footer>
