--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" dir="rtl">
     <mat-toolbar-row>
-      <button mat-icon-button>
+      <button mat-icon-button *ngIf="status">
         <mat-icon>menu</mat-icon>
       </button>
 
@@ -8,7 +8,7 @@
 
       <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
         <ul fxLayout="row" fxLayoutGap="10px">
-          <li>
+          <!-- <li>
             <button mat-icon-button>
               <mat-icon>settings</mat-icon>
             </button>
@@ -17,7 +17,7 @@
             <button mat-icon-button>
               <mat-icon>help_outline</mat-icon>
             </button>
-          </li>
+          </li> -->
           <li>
             <button mat-button [matMenuTriggerFor]="menu">
               <mat-icon>person_outline</mat-icon>
