--- a/src/app/modules/details/details.component.html
+++ b/src/app/modules/details/details.component.html
@@ -1,1 +1,43 @@
-<p>details works!</p>
+<div class="container">
+  <div class="row" dir="rtl">
+    <div class="col-lg-9">
+      <div>
+        <mat-card class="main-news">
+          <h1 style="text-align: right;">news</h1>
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Shiba Inu</mat-card-title>
+            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          </mat-card-header>
+          <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+              A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+              bred for hunting
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quidem unde inventore soluta ab temporibus odit veniam, rerum dolorem voluptates dolores dolorum culpa magnam delectus vero ipsa officia necessitatibus molestias.
+            </p>
+          </mat-card-content>
+          <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+              A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+              bred for hunting.
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
+    <div class="col-lg-3">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
