--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -1,210 +1,269 @@
-<div class="container"
-  fxLayout="row"
-  fxLayout.lt-md="row wrap"
-  fxLayoutAlign="space-between center"
-  fxLayoutAlign.lt-md="center"
-  fxLayoutGap="20px" dir="rtl">
+<div class="container">
+  <div class="row" dir="rtl">
 
-  <mat-card class="main-news" fxFlex=60% fxFlex.lt-md=100%>
-    <a [routerLink]="['/news/1']">
-      <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    </a>
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
-    </mat-card-content>
-  </mat-card>
+    <!-- main news mat card  -->
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" fxFlex=30% fxFlex.lt-md=90% fxFlexOffset="20px">
+    <div class="col-lg-8 col-md-12 col-sm-12 main_news">
+      <h2>header</h2>
+      <mat-card class="main-news">
+        <a [routerLink]="['/news/1']">
+          <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        </a>
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+            bred for hunting.
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
+    <!-- stuck data mat table  -->
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container>
+    <div class="col-lg-4 col-md-12 col-sm-12 data_table">
+      <h2>header</h2>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="width: 100%;">
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-    </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-    </ng-container>
+        <ng-container matColumnDef="weight">
+          <th mat-header-cell *matHeaderCellDef> Weight </th>
+          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+        <ng-container matColumnDef="symbol">
+          <th mat-header-cell *matHeaderCellDef> Symbol </th>
+          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        </ng-container>
 
-</div>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
 
-<div class="container-sub"
-  fxLayout="row"
-  fxLayout.lt-md="row wrap"
-  fxLayoutAlign="start"
-  fxLayoutAlign.lt-md="center"
-  fxLayoutGap="20px" dir="rtl">
+  </div>
 
-  <mat-card class="example-card" fxFlex=15 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and
-      </p>
-    </mat-card-content>
-  </mat-card>
+  <div class="row sub_news" dir="rtl">
 
-  <mat-card class="example-card" fxFlex=15 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and
-      </p>
-    </mat-card-content>
-  </mat-card>
+    <div class="col-lg-12 col-md-12 col-sm-12 title">
+      <h2>Header</h2>
+    </div>
 
-  <mat-card class="example-card" fxFlex=15 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and
-      </p>
-    </mat-card-content>
-  </mat-card>
+    <!-- sub news mat card  -->
 
-  <mat-card class="example-card" fxFlex=15 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and
-      </p>
-    </mat-card-content>
-  </mat-card>
+    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+  </div>
+
+  <br><br><br>
+  <mat-divider></mat-divider>
+  <br><br><br>
+
+  <div class="row learn" dir="rtl">
+
+    <!-- main videos mat card  -->
+
+    <div class="col-lg-8 col-md-12 col-sm-12 main_video">
+
+      <h2>header</h2>
+
+      <mat-card class="main-news">
+        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+            bred for hunting.
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <!-- learn list mat list  -->
+
+    <div class="col-lg-4 col-md-12 col-sm-12 learn_list">
+
+      <h2>header</h2>
+
+      <mat-list role="list">
+        <mat-list-item role="listitem">
+          <a>sdkjsjd</a>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item role="listitem">Itdfgsd sdfg sddg sgsdfbem 2</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item role="listitem">Item 3</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item role="listitem">Item 3</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item role="listitem">Item 3</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item role="listitem">Item 3</mat-list-item>
+      </mat-list>
+    </div>
+
+  </div>
+
+  <div class="row sub_news" dir="rtl">
+
+    <div class="col-lg-12 col-md-12 col-sm-12 title">
+      <h2>Header</h2>
+    </div>
+
+    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+  </div>
+
+  <br><br><br>
+  <mat-divider></mat-divider>
+  <br><br><br>
+
+  <div class="row sub_video" dir="rtl">
+
+    <div class="col-lg-12 col-md-12 col-sm-12 title">
+      <h2>Header</h2>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+  </div>
+
 </div>
 
 <br><br><br>
-<mat-divider></mat-divider>
 
-<div class="container"
-  fxLayout="row"
-  fxLayout.lt-md="row wrap"
-  fxLayoutAlign="space-between center"
-  fxLayoutAlign.lt-md="center"
-  fxLayoutGap="20px" dir="rtl">
-
-  <mat-card class="main-news" fxFlex=60% fxFlex.lt-md=100%>
-    <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
-    </mat-card-content>
-  </mat-card>
-
-  <mat-list role="list" fxFlex=30 fxFlex.lt-md=100%>
-    <h2 style="text-align: center;">news</h2>
-    <mat-list-item role="listitem">
-      <a>sdkjsjd</a>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item role="listitem">Itdfgsd sdfg sddg sgsdfbem 2</mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item role="listitem">Item 3</mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item role="listitem">Item 3</mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item role="listitem">Item 3</mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item role="listitem">Item 3</mat-list-item>
-  </mat-list>
-
-</div>
-
-<div class="container-sub"
-  fxLayout="row"
-  fxLayout.lt-md="row wrap"
-  fxLayoutAlign="start"
-  fxLayoutAlign.lt-md="center"
-  fxLayoutGap="20px" dir="rtl">
-
-  <mat-card class="example-card" fxFlex=15 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and
-      </p>
-    </mat-card-content>
-  </mat-card>
-
-  <mat-card class="example-card" fxFlex=15 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and
-      </p>
-    </mat-card-content>
-  </mat-card>
-
-  <mat-card class="example-card" fxFlex=15 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and
-      </p>
-    </mat-card-content>
-  </mat-card>
-
-  <mat-card class="example-card" fxFlex=15 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and
-      </p>
-    </mat-card-content>
-  </mat-card>
-</div>
-
-<br><br><br>
-<mat-divider></mat-divider>
-<br><br><br>
-
-<div class="container-subs"
-  fxLayout="row"
-  fxLayout.lt-md="row wrap"
-  fxLayoutAlign="start"
-  fxLayoutAlign.lt-md="center"
-  fxLayoutGap="20px" dir="rtl">
-
-  <mat-card class="example-card" fxFlex=25 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  </mat-card>
-
-  <mat-card class="example-card" fxFlex=25 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  </mat-card>
-
-  <mat-card class="example-card" fxFlex=25 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  </mat-card>
-
-  <mat-card class="example-card" fxFlex=25 fxFlex.lt-md=40>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  </mat-card>
-</div>
