--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -2,51 +2,104 @@
   margin-top: 5%;
 }
 
-.container-sub{
+.main_news{
+  h2 {
+    text-align: right;
+  }
+  .main-news {
+    width: 100%;
+  }
+  .main-news img {
+    width: 100%;
+    height: 460px;
+  }
+}
+
+.data_table h2 {
+  text-align: right;
+  table {
+    width: 100%;
+  }
+}
+
+.sub_news {
   margin-top: 5%;
-  margin-right: 5%;
+  .title h2 {
+    text-align: right;
+  }
 }
 
-.main-news{
-  max-width: 400px;
-  margin-right: 5%;
+.learn {
+  .main_video {
+    .main-news{
+      max-width: 100%;
+    }
+    h2 {
+      text-align: right;
+    }
+    .main-news img {
+      width: 100%;
+      height: 460px;
+    }
+  }
+  .learn_list {
+    h2 {
+      text-align: right;
+    }
+    mat-list {
+      width: 100%;
+      margin-left: 5%;
+      box-shadow: 5px 10px 18px #b9b8b8;
+      height: 530px;
+      background-color: white;
+      mat-list-item {
+        height: 70px;
+      }
+    }
+  }
 }
 
-.main-news img {
-  width: 100%;
-  height: 460px;
+.sub_video{
+  .title h2 {
+    text-align: right;
+  }
 }
 
-table {
-  width: 100%;
-  margin-left: 5%;
-}
-
-mat-list {
-  margin-left: 5%;
-  box-shadow: 5px 10px 18px #b9b8b8;
-  height: 530px;
-  background-color: white;
-}
-
-mat-list mat-list-item {
-  height: 70px;
-}
-@media screen and (max-width:768px) {
-  .main-news{
-    margin-right: 3%;
+@media screen and (max-width:820px) {
+  .data_table {
+    margin-top: 10%;
   }
 
-  table {
-    margin-top: 5%;
+  .sub_news {
+    margin-top: 10%;
+    div{
+      padding-bottom: 5%;
+    }
+  }
+
+  .learn_list {
+    margin-top: 10%;
+  }
+
+  .sub_video div{
+    padding-bottom: 5%;
   }
 }
 
 @media screen and (max-width:576px) {
-  .main-news img {
-    height: 250px;
+  .main_news{
+    .main-news img {
+      width: 100%;
+      height: 300px;
+    }
   }
-  table {
-    margin-top: 5%;
+
+  .learn {
+    .main_video {
+      .main-news img {
+        width: 100%;
+        height: 300px;
+      }
+    }
   }
 }
