--- a/src/app/modules/register/register.component.scss
+++ b/src/app/modules/register/register.component.scss
@@ -3,40 +3,116 @@
 }
 
 .container {
-  margin-top: 10%;
+  margin-top: 5%;
   margin-bottom: 5%;
 }
 
-mat-toolbar {
-  background-color: white;
-  .span{
-    margin: auto;
-    font-size: 30px;
-    font-weight: 600;
-    font-family: Arial, Helvetica, sans-serif;
+.register_box {
+  margin-right: 22%;
+  mat-toolbar {
+    background-color: white;
+    .span{
+      margin: auto;
+      font-size: 30px;
+      font-weight: 600;
+    }
+  }
+
+  mat-label {
+    font-size: 17px;
+  }
+
+  .example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+    .example-full-width {
+      width: 100%;
+      margin-right: 10%;
+      margin-top: 5%;
+    }
+
+    .example-half-width {
+      width: 100%;
+      margin-right: 20%;
+      margin-top: 10%;
+      margin-bottom: 10%;
+    }
+
+    .captcha_image{
+      width: 100%;
+      img {
+        height: 60px;
+        width: 80%;
+        margin-right: 10%;
+        margin-top: 10%;
+        margin-bottom: 10%;
+      }
+    }
+  }
+
+  button {
+    margin-left: 25%;
+    margin-top: 5%;
+    width: 30%;
+    font-size: 20px;
+    padding: 1%;
   }
 }
 
-mat-label {
-  font-size: 17px;
+
+@media screen and (max-width:820px){
+  .register_box{
+    margin-right:0px;
+    .example-form {
+      .example-full-width {
+        margin-right: 15%;
+      }
+
+      .example-half-width {
+        width: 100%;
+        margin-right: 30%;
+      }
+
+      .captcha_image{
+        img {
+          height: 60px;
+          width: 80%;
+          margin-right: 40%;
+        }
+      }
+    }
+
+    button {
+      margin-left: 20%;
+    }
+  }
 }
 
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
-}
+@media screen and (max-width:576px) {
+  .register_box{
+    .example-form {
+      width: 80%;
+      .example-full-width {
+        margin-right: 10%;
+      }
 
-.example-full-width {
-  width: 100%;
-  margin-right: 10%;
-  margin-top: 5%;
-}
+      .example-half-width {
+        width: 100%;
+        margin-right: 20%;
+      }
 
-button {
-  margin-right: 50%;
-  margin-top: 5%;
-  width: 30%;
-  font-size: 20px;
-  padding: 1%;
+      .captcha_image{
+        img {
+          height: 50px;
+          width: 80%;
+          margin-right: 30%;
+        }
+      }
+    }
+
+    button {
+      margin-left: 25%;
+    }
+  }
 }
