--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,21 +1,45 @@
-<h1 matDialogTitle dir="rtl">
-  <span>ورود به سایت</span>
-</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12 title">
+      <h1 matDialogTitle dir="rtl">
+        <span>ورود به سایت</span>
+      </h1>
+    </div>
 
-<mat-dialog-content dir="rtl">
-  <mat-form-field>
-    <mat-label>موبایل</mat-label>
-    <input matInput type="text" [(ngModel)]="mobile" name="mobile" placeholder="شماره موبایل خود را وارد نمایید">
-  </mat-form-field>
-<br>
-  <mat-form-field>
-    <mat-label>پسورد</mat-label>
-    <input matInput type="password" [(ngModel)]="password" name="pass" placeholder="رمز خود را وارد نمایید">
-  </mat-form-field>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12 form_box">
+      <mat-dialog-content dir="rtl">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-12 form_mobile">
+            <mat-form-field>
+              <mat-label>موبایل</mat-label>
+              <input matInput type="text" [(ngModel)]="mobile" name="mobile" placeholder="شماره موبایل خود را وارد نمایید">
+            </mat-form-field>
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-12 form_password">
+            <mat-form-field>
+              <mat-label>پسورد</mat-label>
+              <input matInput type="password" [(ngModel)]="password" name="pass" placeholder="رمز خود را وارد نمایید">
+            </mat-form-field>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-6 form_captcha">
+            <mat-form-field>
+              <mat-label>کد امنیتی</mat-label>
+              <input matInput type="password" placeholder="کد امنیتی را وارد نمایید">
+            </mat-form-field>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-6 form_capImage">
+            <img src="../../../../assets/rick_7680x4320_xtrafondos.com.jpg" alt="">
+          </div>
+        </div>
+      </mat-dialog-content>
+    </div>
 
-</mat-dialog-content>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12 form_button">
+      <mat-dialog-actions>
+        <button mat-raised-button color="primary" matDialogClose>بستن</button>
+        <button mat-raised-button color="primary" (click)="save()">ورود</button>
+    </mat-dialog-actions>
+    </div>
 
-<mat-dialog-actions>
-    <button mat-raised-button color="primary" matDialogClose>بستن</button>
-    <button mat-raised-button color="primary" (click)="save()">ورود</button>
-</mat-dialog-actions>
+  </div>
+</div>
