--- a/src/app/shared/components/login/login.component.scss
+++ b/src/app/shared/components/login/login.component.scss
@@ -2,6 +2,45 @@
   font-family: "BKoodakBold";
 }
 
+.container-fluid {
+  // height: 350px;
+  .title h1 {
+    text-align: center;
+  }
+
+  .form_box {
+    .form_mobile{
+      margin-top: 5%;
+    }
+
+    .form_password{
+      margin-top: 5%;
+    }
+
+    .form_captcha{
+      margin-top: 5%;
+    }
+
+    .form_capImage{
+      margin-top: 5%;
+      img {
+        width: 100%;
+        height: 50px;
+      }
+    }
+  }
+
+  .form_button{
+    margin-top: 10%;
+    button {
+      margin-left: 20%;
+      padding: 0 5% 0 5%;
+      font-size: 17px;
+    }
+  }
+}
+
 mat-form-field {
   width: 100%;
 }
+
