--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -4,7 +4,10 @@
     <!-- main news mat card  -->
 
     <div class="col-lg-8 col-md-12 col-sm-12 main_news">
-      <h2>header</h2>
+      <h1>
+        <img src="../../../assets/news_icon.png" alt="">
+        اخبار
+      </h1>
       <mat-card class="main-news">
         <a [routerLink]="['/news/1']">
           <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
@@ -22,7 +25,10 @@
     <!-- stuck data mat table  -->
 
     <div class="col-lg-4 col-md-12 col-sm-12 data_table">
-      <h2>header</h2>
+      <h1>
+        <img src="../../../assets/chart_icon.png" alt="">
+        بازارها
+      </h1>
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="position">
@@ -55,7 +61,9 @@
   <div class="row sub_news" dir="rtl">
 
     <div class="col-lg-12 col-md-12 col-sm-12 title">
-      <h2>Header</h2>
+      <h2>
+        سایر اخبار
+      </h2>
     </div>
 
     <!-- sub news mat card  -->
@@ -116,7 +124,10 @@
 
     <div class="col-lg-8 col-md-12 col-sm-12 main_video">
 
-      <h2>header</h2>
+      <h1>
+        <img src="../../../assets/learning_icon.png" alt="">
+        آموزش
+      </h1>
 
       <mat-card class="main-news">
         <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
@@ -134,7 +145,10 @@
 
     <div class="col-lg-4 col-md-12 col-sm-12 learn_list">
 
-      <h2>header</h2>
+      <h1>
+        <img src="../../../assets/article_icon.png" alt="">
+        مقلات آموزشی
+      </h1>
 
       <mat-list role="list">
         <mat-list-item role="listitem">
@@ -158,7 +172,7 @@
   <div class="row sub_news" dir="rtl">
 
     <div class="col-lg-12 col-md-12 col-sm-12 title">
-      <h2>Header</h2>
+      <h2>سایر آموزش ها</h2>
     </div>
 
     <div class="col-lg-2 col-md-6 col-sm-6 col-12">
@@ -214,7 +228,10 @@
   <div class="row sub_video" dir="rtl">
 
     <div class="col-lg-12 col-md-12 col-sm-12 title">
-      <h2>Header</h2>
+      <h1>
+        <img src="../../../assets/video_icon.png" alt="">
+        ویدئوها
+      </h1>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-6 col-12">
