--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -1,11 +1,24 @@
+h1{
+  text-align: right;
+  font-family: "BKoodakBold";
+  font-size: 30px;
+  img{
+    width: 40px;
+    height: 40px;
+  }
+}
+
+h2 {
+  text-align: right;
+  font-family: "BKoodakBold";
+  font-size: 25px;
+}
+
 .container {
   margin-top: 5%;
 }
 
 .main_news{
-  h2 {
-    text-align: right;
-  }
   .main-news {
     width: 100%;
   }
@@ -15,8 +28,7 @@
   }
 }
 
-.data_table h2 {
-  text-align: right;
+.data_table {
   table {
     width: 100%;
   }
@@ -24,9 +36,6 @@
 
 .sub_news {
   margin-top: 5%;
-  .title h2 {
-    text-align: right;
-  }
 }
 
 .learn {
@@ -34,18 +43,13 @@
     .main-news{
       max-width: 100%;
     }
-    h2 {
-      text-align: right;
-    }
+
     .main-news img {
       width: 100%;
       height: 460px;
     }
   }
   .learn_list {
-    h2 {
-      text-align: right;
-    }
     mat-list {
       width: 100%;
       margin-left: 5%;
@@ -56,12 +60,6 @@
         height: 70px;
       }
     }
-  }
-}
-
-.sub_video{
-  .title h2 {
-    text-align: right;
   }
 }
 
