adding service to login page for getting captcha image and sending data to the server

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -55,13 +55,13 @@
             </button>
             <mat-menu #menu3="matMenu">
               <button mat-menu-item>
-                <a [routerLink]="['/']" style="color:black;text-decoration:none;">نقشه بازار</a>
+                <a [routerLink]="['/marketmap']" style="color:black;text-decoration:none;">نقشه بازار</a>
               </button>
               <button mat-menu-item>
-                <a [routerLink]="['/']" style="color:black;text-decoration:none;">شاخص ها</a>
+                <a [routerLink]="['/indexes']" style="color:black;text-decoration:none;">شاخص ها</a>
               </button>
               <button mat-menu-item>
-                <a [routerLink]="['/']" style="color:black;text-decoration:none;">سهام</a>
+                <a [routerLink]="['/stock']" style="color:black;text-decoration:none;">سهام</a>
               </button>
             </mat-menu>
           </li>
