--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -9,7 +9,7 @@
         اخبار
       </h1>
       <mat-card class="main-news">
-        <a [routerLink]="['/news/1']">
+        <a href="/news/1">
           <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         </a>
         <mat-card-content>
