--- a/src/app/modules/details/details.component.html
+++ b/src/app/modules/details/details.component.html
@@ -1,13 +1,15 @@
 <div class="container">
   <div class="row" dir="rtl">
-    <div class="col-lg-9">
+    <div class="col-lg-9 content_box">
       <div>
         <mat-card class="main-news">
-          <h1 style="text-align: right;">news</h1>
           <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Shiba Inu</mat-card-title>
-            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+            <mat-card-title>عنوان خبر</mat-card-title>
+            <mat-card-subtitle>
+              <span class="score">score</span>
+              <span class="date">date</span>
+              <span class="author">author</span>
+            </mat-card-subtitle>
           </mat-card-header>
           <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
           <mat-card-content>
@@ -29,7 +31,8 @@
         </mat-card>
       </div>
     </div>
-    <div class="col-lg-3">
+
+    <div class="col-lg-3 sub_menu">
       <mat-card class="example-card">
         <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         <mat-card-content>
