working on content headers and commit before adding font awesome

--- a/src/app/modules/details/details.component.html
+++ b/src/app/modules/details/details.component.html
@@ -6,9 +6,9 @@
           <mat-card-header>
             <mat-card-title>عنوان خبر</mat-card-title>
             <mat-card-subtitle>
-              <span class="score">score</span>
-              <span class="date">date</span>
-              <span class="author">author</span>
+                <p>نویسنده</p>
+                <p>تاریخ</p>
+                <p>امتیاز</p>
             </mat-card-subtitle>
           </mat-card-header>
           <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
@@ -33,6 +33,13 @@
     </div>
 
     <div class="col-lg-3 sub_menu">
+      <mat-card class="example-card">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
       <mat-card class="example-card">
         <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         <mat-card-content>
