--- a/src/app/modules/details/details.component.scss
+++ b/src/app/modules/details/details.component.scss
@@ -8,6 +8,7 @@
 
 .content_box {
   margin-top: 5%;
+  margin-bottom: 5%;
   mat-card-title{
     font-size: 30px;
     margin-top: 25%;
@@ -15,9 +16,21 @@
 
   mat-card-subtitle {
     margin-top: 20%;
-    .score, .date {
-      margin-right: 100%;
-      padding: 0 80% 0 80%;
+    p{
+      display: inline;
+      padding-left: 100%;
+    }
+  }
+
+  img {
+    width: 100%;
+    height: 450px;
+  }
+
+  mat-card-content {
+    padding: 5% 0 5% 0;
+    p{
+      text-align: right;
     }
   }
 }
