working on mobile size of the detail component

--- a/src/app/modules/details/details.component.html
+++ b/src/app/modules/details/details.component.html
@@ -32,35 +32,43 @@
 
     <div class="col-lg-3 sub_menu">
       <div class="sticky-top" style="padding-top: 5%;">
-        <mat-card class="example-card">
-          <mat-card-content>
-            <span>
-              <img src="../../../assets/telegram.png" alt="">
-            </span>
-            <span>
-              <img src="../../../assets/whatsapp.png" alt="">
-            </span>
-            <span>
-              <img src="../../../assets/instagram.png" alt="">
-            </span>
-          </mat-card-content>
-        </mat-card>
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <p>
-              The Shiba Inu is the smallest of the six original and
-            </p>
-          </mat-card-content>
-        </mat-card>
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <p>
-              The Shiba Inu is the smallest of the six original and
-            </p>
-          </mat-card-content>
-        </mat-card>
+        <div class="row">
+          <div class="col-lg-12">
+            <mat-card class="example-card">
+              <mat-card-content>
+                <span>
+                  <img src="../../../assets/telegram.png" alt="">
+                </span>
+                <span>
+                  <img src="../../../assets/whatsapp.png" alt="">
+                </span>
+                <span>
+                  <img src="../../../assets/instagram.png" alt="">
+                </span>
+              </mat-card-content>
+            </mat-card>
+          </div>
+          <div class="col-lg-12 col-md-6 col-sm-6 col-12">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </div>
+          <div class="col-lg-12 col-md-6 col-sm-6 col-12">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </div>
+        </div>
       </div>
       <mat-divider></mat-divider>
       <!-- <div class=" sticky-top news_list">
