--- a/src/app/modules/details/details.component.scss
+++ b/src/app/modules/details/details.component.scss
@@ -65,3 +65,43 @@
     }
   }
 }
+
+@media screen and (max-width:820px) {
+  .sub_menu {
+    .example-card {
+      img {
+        max-width: 400px;
+        height: 250px;
+      }
+      mat-card-content {
+        span {
+          padding-left: 20%;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width:576px) {
+  .sub_menu {
+    .example-card {
+      img {
+        max-width: 400px;
+        height: 250px;
+      }
+      mat-card-content {
+        span {
+          padding-left: 15%;
+        }
+      }
+    }
+  }
+
+  .content_box {
+    margin-top: 5%;
+    img {
+      width: 100%;
+      height: 250px;
+    }
+  }
+}
