adding icon to the home page video list

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" dir="rtl">
     <mat-toolbar-row>
-      <button mat-icon-button *ngIf="status=='admin'" (click)="toggleSideBar()">
+      <button mat-icon-button *ngIf="status=='admin'" (click)="toggleSideBar()" style="margin-bottom: 1%;">
         <mat-icon>menu</mat-icon>
       </button>
 
