--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -236,7 +236,10 @@
 
     <div class="col-lg-3 col-md-6 col-sm-6 col-12">
       <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <a href="/learn/film/id" class="play_icon">
+          <img src="../../../assets/play.png" alt="">
+        </a>
         <mat-card-content>
           <p>
             The Shiba Inu is the smallest of the six original and
@@ -247,7 +250,10 @@
 
     <div class="col-lg-3 col-md-6 col-sm-6 col-12">
       <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <a href="/learn/film/id" class="play_icon">
+          <img src="../../../assets/play.png" alt="">
+        </a>
         <mat-card-content>
           <p>
             The Shiba Inu is the smallest of the six original and
@@ -258,7 +264,10 @@
 
     <div class="col-lg-3 col-md-6 col-sm-6 col-12">
       <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <a href="/learn/film/id" class="play_icon">
+          <img src="../../../assets/play.png" alt="">
+        </a>
         <mat-card-content>
           <p>
             The Shiba Inu is the smallest of the six original and
@@ -269,7 +278,10 @@
 
     <div class="col-lg-3 col-md-6 col-sm-6 col-12">
       <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <a href="/learn/film/id" class="play_icon">
+          <img src="../../../assets/play.png" alt="">
+        </a>
         <mat-card-content>
           <p>
             The Shiba Inu is the smallest of the six original and
