--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -63,6 +63,21 @@ h2 {
   }
 }
 
+.video_image {
+  position: relative;
+}
+
+.play_icon {
+  cursor: pointer;
+  img{
+    position: absolute;
+    left: 40%;
+    top: 25%;
+    width: 50px;
+    height: 50px;
+  }
+}
+
 @media screen and (max-width:820px) {
   .data_table {
     margin-top: 10%;
