--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,19 @@
-<p>sidebar works!</p>
+<mat-nav-list>
+  <div class="profile_card">
+    <div class="header">
+      <h2>Ali khandan</h2>
+      <h4>example@email.com</h4>
+    </div>
+    <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  </div>
+
+  <mat-divider></mat-divider>
+
+  <h2 matSubheader>Pages</h2>
+
+  <a mat-list-item href="/admin">Dashboard</a>
+
+  <mat-divider></mat-divider>
+
+  another menu
+</mat-nav-list>
