--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -76,6 +76,10 @@ h2 {
     width: 50px;
     height: 50px;
   }
+  img:hover {
+    width: 55px;
+    height: 55px;
+  }
 }
 
 @media screen and (max-width:820px) {
